k8s/services/rocketchat/app/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  annotations:
    secret.reloader.stakater.com/reload: rocketchat-mongodb-credentials
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: rocketchat
          image: registry.rocket.chat/rocketchat/rocket.chat
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: metrics
              containerPort: 9100
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            runAsUser: 999
          volumeMounts:
            - mountPath: /app/uploads
              name: rocket-data
            - mountPath: /tmp
              name: tmp
      securityContext:
        fsGroup: 999
        runAsUser: 999
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: tmp
        - name: rocket-data
          persistentVolumeClaim:
            claimName: rocketchat-rocketchat
