k8s/services/rocketchat/app/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
