k8s/services/rocketchat/app/base/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rocketchat
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: rocketchat
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: rocketchat
          port: 80
